Since we're using opacity instead of display for showing the slides, we need to use z-indexes to make sure the shown slide is actually on top so our users can interact with it correctly.

--- a/wdn/templates_3.0/scripts/plugins/blueberry/blueberry.css
+++ b/wdn/templates_3.0/scripts/plugins/blueberry/blueberry.css
@@ -43,6 +43,7 @@
     opacity:0;
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter:alpha(opacity=0);
+    z-index:1;
 }
 #wdn_Carousel .slides > li > img, #wdn_Carousel .slides > li > a {
     display: block;
@@ -76,7 +77,7 @@
     -moz-border-radius:0;
     border-radius:0;
 }
-#wdn_Carousel .slides > li.active { display: block; position: relative; opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100); }
+#wdn_Carousel .slides > li.active { display: block; position: relative; opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100);z-index:2;}
 #wdn_Carousel .crop > li > img { width: auto; }
 
 /* For the pagination between slides (the numbers) */
